--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,20 @@
 # defaults file for tsocks
 ---
 tsocks_install: []
+
+tsocks_local:
+  - 192.168.0.0/255.255.255.0
+  - 10.0.0.0/255.0.0.0
+
+tsocks_path:
+  - directives:
+    - reaches 150.0.0.0/255.255.0.0
+    - reaches 150.1.0.0:80/255.255.0.0
+    - server 10.1.7.25
+    - server_type 5
+    - default_user delius
+    - default_pass hello
+
+tsocks_server: 192.168.0.1
+tsocks_server_type: 5
+tsocks_server_port: 1080
