--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
   - sudo apt-get update -qq
 
   # Remove tsocks
-  - sudo apt-get remove --purge tsocks
+  - sudo apt-get remove --purge --yes tsocks
 
 install:
   # Install Ansible.
