Consistency changes * Ansible 2 fixes * Add support for Ubuntu 16.04

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,18 +3,24 @@
 - name: install dependencies
   apt:
     name: "{{ item }}"
-    state: latest
+    state: "{{ apt_install_state | default('latest') }}"
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
-  with_items: tsocks_dependencies
-  tags: [configuration, tsocks, tsocks-dependencies]
+  with_items: "{{ tsocks_dependencies }}"
+  tags:
+    - configuration
+    - tsocks
+    - tsocks-dependencies
 
 - name: install additional
   apt:
     name: "{{ item }}"
-    state: latest
-  with_items: tsocks_install
-  tags: [configuration, tsocks, tsocks-install]
+    state: "{{ apt_install_state | default('latest') }}"
+  with_items: "{{ tsocks_install }}"
+  tags:
+    - configuration
+    - tsocks
+    - tsocks-install
 
 - name: update configuration file - /etc/tsocks/tsocks.conf
   template:
@@ -23,4 +29,7 @@
     owner: root
     group: root
     mode: 0644
-  tags: [configuration, tsocks, tsocks-configuration]
+  tags:
+    - configuration
+    - tsocks
+    - tsocks-configuration
