--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 # tasks file
 ---
 - name: install dependencies
-  apt:
+  ansible.builtin.apt:
     name: "{{ tsocks_dependencies }}"
     state: "{{ apt_install_state | default('latest') }}"
     update_cache: true
@@ -12,7 +12,7 @@
     - tsocks-dependencies
 
 - name: install additional
-  apt:
+  ansible.builtin.apt:
     name: "{{ tsocks_install }}"
     state: "{{ apt_install_state | default('latest') }}"
   tags:
@@ -21,7 +21,7 @@
     - tsocks-install
 
 - name: update configuration file - /etc/tsocks/tsocks.conf
-  template:
+  ansible.builtin.template:
     src: etc/tsocks.conf.j2
     dest: /etc/tsocks.conf
     owner: root
