--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,7 +26,7 @@
     dest: /etc/tsocks.conf
     owner: root
     group: root
-    mode: 0644
+    mode: '0644'
   tags:
     - configuration
     - tsocks
